# dart_shared_library

./: .dart_version  .gitignore  CMakeLists.txt  fork_build_read.md
examples/: CMakeLists.txt
examples/isolate_snapshot_bin_read/: CMakeLists.txt
examples/isolate_snapshot_bin_read/src/: main.cpp
examples/realtime_example/: CMakeLists.txt  main.cpp
examples/realtime_example/dart/: main.dart
examples/simple_example_ffi/: pubspec.yaml
src/: CMakeLists.txt  dart_dll.cpp  dart_lib.cpp  dart_lib.h  isolate_setup.cpp  isolate_setup.h  vm_snapshot_data.inc
